# Vector-Database

./: IMPORT.md  README.md  ingest.py  main.py  pyproject.toml  rag_search.py  requirements.txt  search.py
chroma_db/: chroma.sqlite3
data/: notes1.txt  notes2.md
temp_uploads/: context engineering.txt
